desktop version re-factored as per figma

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
         but understanding how developers think is invaluable. 
       </p>
-      <div class="introduction__offer">
-        <p class="introduction__paragraph introduction__paragraph-offer">
-          <span class="introduction__text--bold">Try it free 7 days</span> then $20/mo. thereafter
-        </p>
-      </div>
     </section>
     <div class="contact">
+      <div class="contact__offer">
+        <p class="contact__paragraph">
+          <span class="contact__text--bold">Try it free 7 days</span> then $20/mo. thereafter
+        </p>
+      </div>
       <form novalidate action="" class="contact__form">
         <div class="contact__item">
           <input type="text" placeholder="First Name" id="first-name" required>
