--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
           <span class="contact__text--bold">Try it free 7 days</span> then $20/mo. thereafter
         </p>
       </div>
-      <form novalidate action="" class="contact__form">
+      <form action="" class="contact__form">
         <div class="contact__item">
-          <input type="text" pattern="[A-Za-z]" placeholder="First Name" id="first-name" required>
-          <img src="images/icon-error.svg" alt="error" class="contact__error" id="name-error-icon">
-          <p class="contact__error-text" id="name-error" aria-live="polite"></p>
+          <input type="text" pattern="[a-zA-Z0-9À-ž]*$" placeholder="First Name" id="first-name" data-errorId="1" required>
+          <img src="images/icon-error.svg" alt="error" class="contact__error-icon" data-errorId="1"> 
+          <p class="contact__error-text" id="name-error" aria-live="polite" data-errorId="1"></p>
         </div>
         <div class="contact__item">
-          <input type="text" pattern="[A-Za-z]" placeholder="Last Name" id="surname" required>
-          <img src="images/icon-error.svg" alt="error" class="contact__error" id="surname-error-icon">
-          <p class="contact__error-text" id="surname-error" aria-live="polite"></p>
+          <input type="text" pattern="[a-zA-Z0-9À-ž]*$" placeholder="Last Name" id="surname" data-errorId="2" required>
+          <img src="images/icon-error.svg" alt="error" class="contact__error-icon" data-errorId="2">
+          <p class="contact__error-text" id="surname-error" aria-live="polite" data-errorId="2"></p>
         </div>
         <div class="contact__item">
-          <input type="email" pattern="^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$" placeholder="Email Address" id="email" required>
-          <img src="images/icon-error.svg" alt="error" class="contact__error" id="email-error-icon">
-          <p class="contact__error-text" id="email-error" aria-live="polite"></p>
+          <input type="email" pattern="^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$" placeholder="Email Address" id="email" data-errorId="3" required>
+          <img src="images/icon-error.svg" alt="error" class="contact__error-icon" data-errorId="3">
+          <p class="contact__error-text" id="email-error" aria-live="polite" data-errorId="3"></p>
         </div>
         <div class="contact__item">
-          <input type="password" placeholder="Password" id="password" required>
-          <img src="images/icon-error.svg" alt="error" class="contact__error" id="password-error-icon">
-          <p class="contact__error-text" id="password-error" aria-live="polite"></p>
+          <input type="password" placeholder="Password" id="password" data-errorId="4" required>
+          <img src="images/icon-error.svg" alt="error" class="contact__error-icon" data-errorId="4">
+          <p class="contact__error-text" id="password-error" aria-live="polite" data-errorId="4"></p>
         </div>
         
-        <button class="contact__button">
+        <button type="button" class="contact__button">
           Claim your free trial
         </button>
         <p class="contact__TS">
