--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <span class="contact__text--bold">Try it free 7 days</span> then $20/mo. thereafter
         </p>
       </div>
-      <form action="" class="contact__form">
+      <form class="contact__form">
         <div class="contact__item">
           <input type="text" pattern="[a-zA-Z0-9À-ž]*$" placeholder="First Name" id="first-name" data-errorId="1" required>
           <img src="images/icon-error.svg" alt="error" class="contact__error-icon" data-errorId="1"> 
@@ -56,7 +56,7 @@
           <p class="contact__error-text" id="password-error" aria-live="polite" data-errorId="4"></p>
         </div>
         
-        <button type="button" class="contact__button">
+        <button class="contact__button">
           Claim your free trial
         </button>
         <p class="contact__TS">
